--- a/static/app/templates/coments.html
+++ b/static/app/templates/coments.html
@@ -29,6 +29,9 @@
             <hr></hr>
             <p>{{coment.date | date: "yyyy-MM-dd HH:mm:ss"}}</p>
             <hr></hr>
+            <p class="coment-up" ng-click="comentUp($index)"><img  ng-src="./img/likes/like_1.jpg"> {{rateNameComent.like}}</p>
+            <p class="coment-down" ng-click="comentDown($index)"><img  ng-src="./img/likes/dislike.jpg"> {{rateNameComent.dislike}}</p>
+
         </li>
     </ul>
 </div>
