--- a/static/main.scss
+++ b/static/main.scss
@@ -57,6 +57,14 @@ h1 {
 	width: 450px;
 }
 
+.phone-images>img:nth-of-type(1){
+	animation-name: none;
+}
+
+//.phone-images>img:nth-of-type(1):focus{
+//	animation-name: fadeInRight;
+//}
+
 .phone-thumbs {
 	list-style: none;
 	margin: 0;
@@ -142,6 +150,15 @@ set-coments>h3{
 	margin-top: 25px;
 }
 
+/*Likes for response*/
+.coment-up, .coment-down {
+	position: relative;
+	float: left;
+}
+.coment-up > img, .coment-down  > img{
+	width: 60px;
+	height: 60px;
+}
 
 /* Animate `ngRepeat` in `phoneList` component */
 .phone-list-item.ng-enter,
