--- a/static/main.scss
+++ b/static/main.scss
@@ -61,8 +61,9 @@ h1 {
 	animation-name: none;
 }
 
-//.phone-images>img:nth-of-type(1):focus{
-//	animation-name: fadeInRight;
+//.phone-images>img:nth-of-type(1):hover{
+//	width: 200%;
+//	height: 200%;
 //}
 
 .phone-thumbs {
